fixing the spacing between elements

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ a:link, a:visited {
 
     background-color: #005174;
     color: #F0EAD6;
-    padding: 20px 23%;
-    margin-bottom: 10px;
+    padding: 20px 34%;
+    margin-bottom: 5%;
     border-radius: 10px;
     font-size: large;
     font-family: '.open-sans-font', sans-serif;
